add github pages and preview function
